# freakiir

./: .gitignore  README.md  flake.nix  pyproject.toml  treefmt.toml
freakiir/: __init__.py  __main__.py  datamodule.py  dataset.py  dsp.py  layer.py  model.py  path.py  pdf.py
freakiir/conf/: callbacks.yaml  config.yaml  dataset.yaml
freakiir/conf/datamodule/: random-filter-with-listen-hrtf.yaml
freakiir/conf/pdf/: uniform.yaml
freakiir/hydra/: __init__.py  callbacks.py
tests/: conftest.py
tests/freakiir/: dataset_test.py  dsp_test.py  layer_test.py  path_test.py  pdf_test.py
